// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table basic 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  display: table;
  border-spacing: 0;
  border-collapse: collapse;
  box-shadow: 0px 1.6px 3.6px 0px rgba(0,0,0,0.132),0px 0.3px 0.9px 0px rgba(0,0,0,0.108);
}

.c1 {
  display: table-header-group;
}

.c4 {
  display: table-row-group;
}

.c2 {
  display: table-row;
  color: inherit;
  outline: none;
}

.c5 {
  display: table-row;
  color: inherit;
  outline: none;
}

.c5:hover {
  background-color: #f5f5f5;
}

.c3 {
  display: table-cell;
  padding: 14px 40px 14px 16px;
  vertical-align: middle;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.3;
  -webkit-letter-spacing: 0.015em;
  -moz-letter-spacing: 0.015em;
  -ms-letter-spacing: 0.015em;
  letter-spacing: 0.015em;
  border-bottom: 1px solid #dedede;
  text-align: left;
}

.c6 {
  display: table-cell;
  padding: 14px 40px 14px 16px;
  vertical-align: middle;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.5;
  -webkit-letter-spacing: 0.015em;
  -moz-letter-spacing: 0.015em;
  -ms-letter-spacing: 0.015em;
  letter-spacing: 0.015em;
  border-bottom: 1px solid #dedede;
  text-align: left;
}

<table
  className="c0"
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="c3"
      >
        Name
      </th>
      <th
        className="c3"
      >
        Surname
      </th>
      <th
        className="c3"
      >
        BirthYear
      </th>
      <th
        className="c3"
      >
        BirthCity
      </th>
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        Mehmet
      </td>
      <td
        className="c6"
      >
        Baran
      </td>
      <td
        className="c6"
      >
        1987
      </td>
      <td
        className="c6"
      >
        22
      </td>
    </tr>
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        John
      </td>
      <td
        className="c6"
      >
        Brown
      </td>
      <td
        className="c6"
      >
        1977
      </td>
      <td
        className="c6"
      >
        32
      </td>
    </tr>
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        Jim
      </td>
      <td
        className="c6"
      >
        Black
      </td>
      <td
        className="c6"
      >
        1997
      </td>
      <td
        className="c6"
      >
        14
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table prop column 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  display: table;
  border-spacing: 0;
  border-collapse: collapse;
  box-shadow: 0px 1.6px 3.6px 0px rgba(0,0,0,0.132),0px 0.3px 0.9px 0px rgba(0,0,0,0.108);
}

.c1 {
  display: table-header-group;
}

.c4 {
  display: table-row-group;
}

.c2 {
  display: table-row;
  color: inherit;
  outline: none;
}

.c5 {
  display: table-row;
  color: inherit;
  outline: none;
}

.c5:hover {
  background-color: #f5f5f5;
}

.c3 {
  display: table-cell;
  padding: 14px 40px 14px 16px;
  vertical-align: middle;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.3;
  -webkit-letter-spacing: 0.015em;
  -moz-letter-spacing: 0.015em;
  -ms-letter-spacing: 0.015em;
  letter-spacing: 0.015em;
  border-bottom: 1px solid #dedede;
  text-align: left;
}

.c6 {
  display: table-cell;
  padding: 14px 40px 14px 16px;
  vertical-align: middle;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.5;
  -webkit-letter-spacing: 0.015em;
  -moz-letter-spacing: 0.015em;
  -ms-letter-spacing: 0.015em;
  letter-spacing: 0.015em;
  border-bottom: 1px solid #dedede;
  text-align: left;
}

<table
  className="c0"
  data={
    Array [
      Object {
        "birthCity": 22,
        "birthYear": 1987,
        "key": "1",
        "name": "Mehmet",
        "surname": "Baran",
      },
      Object {
        "birthCity": 32,
        "birthYear": 1977,
        "key": "2",
        "name": "John",
        "surname": "Brown",
      },
      Object {
        "birthCity": 14,
        "birthYear": 1997,
        "key": "3",
        "name": "Jim",
        "surname": "Black",
      },
    ]
  }
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="c3"
      >
        Name
      </th>
      <th
        className="c3"
      >
        Surname
      </th>
      <th
        className="c3"
      >
        BirthYear
      </th>
      <th
        className="c3"
      >
        BirthCity
      </th>
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        <a
          href="#"
        >
          Mehmet
        </a>
      </td>
      <td
        className="c6"
      >
        Baran
      </td>
      <td
        className="c6"
      >
        1987
      </td>
      <td
        className="c6"
      >
        22
      </td>
    </tr>
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        <a
          href="#"
        >
          John
        </a>
      </td>
      <td
        className="c6"
      >
        Brown
      </td>
      <td
        className="c6"
      >
        1977
      </td>
      <td
        className="c6"
      >
        32
      </td>
    </tr>
    <tr
      className="c5"
    >
      <td
        className="c6"
      >
        <a
          href="#"
        >
          Jim
        </a>
      </td>
      <td
        className="c6"
      >
        Black
      </td>
      <td
        className="c6"
      >
        1997
      </td>
      <td
        className="c6"
      >
        14
      </td>
    </tr>
  </tbody>
</table>
`;
